fixed alignment

--- a/style.css
+++ b/style.css
@@ -116,12 +116,12 @@ hr {
 
 .caption-style-2 {
 	list-style-type: none;
-	/*   margin: 0px; */
+	text-align: center;
 	padding: 0px;
 }
 
 .caption-style-2 li {
-	float: left;
+	display: inline-block;
 	padding: 0px;
 	position: relative;
 	overflow: hidden;
